Modified model and view

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ $(function() {
   // intructs the model to draw 2 new cards for new game
   $("#bet").click( function() {
 		blackjack.deal();
-//		$(this).toggle();
+		$(this).toggle();
 //		$("#Hit").toggle();
 	});
 
